Fixed left column placement.

--- a/main.html
+++ b/main.html
@@ -38,24 +38,24 @@
                             <div class="leftText">
                                 <h4>Bienvenidos!</h4>
                                 <p>Ingrese con su nombre de usuario y contraseña de su ColegioID.</p>
-                                <br>
+
                                 <h4>¿Olvidó su contraseña?</h4>
                                 <p>De click <a href="#" style="color: blue">aqui</a> para cambiar su contraseña.</p>
-                                <br>
+
                                 <h4>¿Olvidó su username?</h4>
                                 <p>Visite nuestro <i>help desk</i> en Celis-008 o llame nuestra línea de ayuda al <a href="#" style="color: blue">787-832-4040</a> Ext. 3331.</p>
-                                <br>
+
                                 <h4>¿Necesita Ayuda?</h4>
                                 <p>Visite nuestra página de ayuda <a href="#" style="color: blue">aqui</a>.
                                     Aun necesita ayuda? Visite nuestro <i>help desk</i> en Celis-008 o llame nuestra línea de ayuda al <a href="#" style="color: blue">787-832-4040</a> Ext. 3331.</p>
-                                <br>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 rightColumn">
                         <form class="LoginBox">
                             <h1 style="font-weight: bold; font-size: 50px">Login</h1>
-                            <input type="text" placeholder="Colegio ID">
+                            <input type="text" placeholder="Username">
                             <input type="password" placeholder="Password">
                             <button type="submit">Login</button>
                             <p class="termsWarning">
